# TwitchKeyboardAPI

./: .gitignore  README.md  pyproject.toml  run.bat
scripts/: raw-windows-setup.ps1  run.bat  run.sh  setup.ps1
twitch_emulator/: __main__.py  gui.py  main.py  pyinstaller.py  twitch_bot.py  window_manager.py
twitch_keyboard_api/: __main__.py  database.py  twitch_bot.py  window_manager.py
