[tool.poetry]
name = "twitch-emulator"
version = "0.1.0"
description = ""
authors = ["PCDSandwichMan <46288251+PCDSandwichMan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
irc = "^20.4.0"
pyautogui = "^0.9.54"
pygetwindow = "^0.0.9"
pydirectinput = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
