[tool.poetry]
name = "TwitchKeyboardApi"
version = "0.1.0"
description = ""
authors = ["PCDSandwichMan <46288251+PCDSandwichMan@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
irc = "^20.4.0"
pyautogui = "^0.9.54"
pygetwindow = "^0.0.9"
pydirectinput = "^1.0.4"
pyfiglet = "^1.0.2"
colorama = "^0.4.6"
pyinquirer = "^1.0.3"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
